更新依赖项，添加新的库并修改配置文件；优化Python版本检查逻辑；重构WebSocket测试用例，增强稳定性；修复VAD检测测试用例，确保测试结果一致性。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "faster-whisper",
     "numpy",
     "pydantic",
+    "pydantic-settings",
     "pytest>=8.3.5",
+    "webrtcvad>=2.0.10",
+    "pytest-asyncio>=0.26.0",
+    "httpx>=0.28.1",
+    "pathlib>=1.0.1",
 ]
 
 [build-system]
