--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -8,7 +8,7 @@ python_classes = Test*
 python_functions = test_*
 
 # 测试命令行选项
-addopts = -ra -q --cov=src --cov-report=term-missing
+addopts = -ra -q 
 
 # 日志配置
 log_cli = false
@@ -16,3 +16,9 @@ log_cli_level = INFO
 
 # 测试运行路径
 testpaths = nextalk/tests 
+
+asyncio_default_fixture_loop_scope = function
+
+markers =
+    unit: 单元测试标记
+    integration: 集成测试标记 
