更新依赖项，替换pathlib为pynput，添加pillow和pystray库；修改ASR识别器模型大小参数，优化配置文件加载逻辑，确保默认值正确；重构测试用例，增强可读性和稳定性。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "webrtcvad>=2.0.10",
     "pytest-asyncio>=0.26.0",
     "httpx>=0.28.1",
-    "pathlib>=1.0.1",
+    "pynput>=1.8.1",
+    "pillow>=11.2.1",
+    "pystray>=0.19.5",
 ]
 
 [build-system]
