添加huggingface-hub依赖；更新README文档以反映新的启动方式和调试选项；修改默认配置以支持中文界面和音频后端设置；重构客户端和服务器启动脚本，支持命令行参数以增强灵活性；优化音频捕获和文本注入逻辑，提升稳定性和可用性。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -1,17 +1,26 @@
 [Client]
 ; 全局热键组合，用于激活/停用语音识别
-hotkey=ctrl+shift+space
+; hotkey=ctrl+shift+space
+hotkey=caps_lock
 ; 服务器WebSocket连接地址
 server_url=ws://127.0.0.1:8000
-; 默认语言设置
-language=en
+; 默认ui界面语言设置
+; language=en
+locale=zh
+; 音频后端设置 (alsa, pulse, oss)
+audio_backend=pulse
 
 [Server]
 ; 默认语音识别模型
-default_model=small.en-int8
+; default_model=small.en-int8
+default_model=large-v3
 ; 语音活动检测敏感度 (0-3)
 vad_sensitivity=2
 ; 计算设备 (cuda, cpu)
 device=cuda
 ; 计算精度类型
-compute_type=int8 
+; compute_type=int8 
+compute_type=float16
+; 默认模型语言设置
+; language=en
+language=zh
