除了热键和注入时冲突，其他逻辑大致正常了
添加FunASR模型支持，更新依赖项和配置文件；重构NexTalk服务器架构，简化WebSocket处理和API路由；优化音频捕获和文本注入功能，提升系统稳定性和性能；更新文档以反映新功能和使用说明。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -3,17 +3,24 @@
 ; hotkey=ctrl+shift+space
 hotkey=caps_lock
 ; 服务器WebSocket连接地址
-server_url=ws://127.0.0.1:8000
+server_url=ws://127.0.0.1:8010/ws
 ; 默认ui界面语言设置
 ; language=en
 locale=zh
 ; 音频后端设置 (alsa, pulse, oss)
 audio_backend=pulse
+; 是否启用文本注入功能（将转录文本输入到当前光标位置）
+enable_injection=true
+; 是否显示文本窗口
+show_text=true
+; 注入失败时是否显示文本窗口
+show_text_on_error=true
 
 [Server]
+port=8010
 ; 默认语音识别模型
-; default_model=small.en-int8
-default_model=large-v3
+; FunASR模型选项：paraformer-zh, paraformer-zh-streaming, SenseVoiceSmall等
+default_model=paraformer-zh-streaming
 ; 语音活动检测敏感度 (0-3)
 vad_sensitivity=2
 ; 计算设备 (cuda, cpu)
@@ -24,3 +31,13 @@ compute_type=float16
 ; 默认模型语言设置
 ; language=en
 language=zh
+; FunASR使用的VAD模型
+funasr_vad_model=fsmn-vad
+; FunASR流式处理模式（实时识别）
+funasr_streaming=true
+; FunASR标点恢复模型（可选）
+; funasr_punc_model=ct-punc
+; FunASR时间戳预测模型（可选）
+; funasr_timestamp_model=fa-zh
+
+log_level=debug
