--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,21 +9,25 @@ authors = [
 dependencies = [
     "fastapi",
     "uvicorn[standard]",
-    "websockets",
-    "pyaudio",
+    "websockets>=10.4",
+    "pyaudio>=0.2.12",
     "webrtcvad-wheels",
     "faster-whisper",
-    "numpy",
+    "numpy>=1.22.4",
     "pydantic",
     "pydantic-settings",
     "pytest>=8.3.5",
     "webrtcvad>=2.0.10",
     "pytest-asyncio>=0.26.0",
     "httpx>=0.28.1",
-    "pynput>=1.8.1",
+    "pynput>=1.7.6",
     "pillow>=11.2.1",
     "pystray>=0.19.5",
     "huggingface-hub>=0.30.2",
+    "silero-vad>=5.1.2",
+    "pip>=25.0.1",
+    "pyperclip>=1.8.2",
+    "funasr>=1.2.6",
 ]
 
 [build-system]
