更新依赖项，添加pyautogui和pyclip库以支持文本注入功能；重构Linux文本注入器，优化依赖检查和文本注入逻辑，确保在缺少依赖时提供清晰的错误提示；实现通过粘贴和模拟输入两种方式进行文本注入，提升用户体验。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "pyperclip>=1.8.2",
     "funasr>=1.2.6",
     "cairosvg>=2.7.0",
+    "pyautogui>=0.9.54",
+    "pyclip>=0.7.0",
 ]
 
 [build-system]
