--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -1,7 +1,7 @@
 [Client]
 ; 全局热键组合，用于激活/停用语音识别
 ; hotkey=ctrl+shift+space
-hotkey=ctrl+super+space
+hotkey=caps_lock
 ; 服务器WebSocket连接地址
 server_url=ws://127.0.0.1:8010/ws
 ; 默认ui界面语言设置
@@ -40,4 +40,4 @@ funasr_streaming=true
 ; FunASR时间戳预测模型（可选）
 ; funasr_timestamp_model=fa-zh
 
-log_level=debug
+log_level=info
