删除不再使用的音频波形图像、启动脚本和多个测试脚本；更新默认配置，禁用文本窗口显示功能以提升用户体验；重构客户端配置加载逻辑，增强布尔值处理能力，确保配置的灵活性和可维护性。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -12,9 +12,9 @@ audio_backend=pulse
 ; 是否启用文本注入功能（将转录文本输入到当前光标位置）
 enable_injection=true
 ; 是否显示文本窗口
-show_text=true
+show_text=FALSE
 ; 注入失败时是否显示文本窗口
-show_text_on_error=true
+show_text_on_error=false
 
 [Server]
 port=8010
