移除不再使用的依赖项和临时文件，更新文档以反映FunASR模型的集成和配置，优化默认配置中的热键设置，提升系统稳定性和用户体验。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -1,7 +1,7 @@
 [Client]
 ; 全局热键组合，用于激活/停用语音识别
 ; hotkey=ctrl+shift+space
-hotkey=caps_lock
+hotkey=super+space
 ; 服务器WebSocket连接地址
 server_url=ws://127.0.0.1:8010/ws
 ; 默认ui界面语言设置
