添加桌面通知功能，更新配置文件以支持通知显示选项，并在用户指南中说明如何控制通知显示。重构通知显示逻辑，确保根据配置决定是否显示通知。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -15,6 +15,8 @@ enable_injection=true
 show_text=FALSE
 ; 注入失败时是否显示文本窗口
 show_text_on_error=false
+; 是否显示桌面通知
+show_notifications=false
 
 [Server]
 port=8010
