更新配置文件，添加对客户端和服务器的单独INI文件支持，并在文档中反映新的配置路径和选项。优化了README和用户指南，确保用户能够清晰理解配置步骤和选项。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -25,11 +25,10 @@ port=8010
 default_model=paraformer-zh-streaming
 ; 语音活动检测敏感度 (0-3)
 vad_sensitivity=2
-; 计算设备 (cuda, cpu)
-device=cuda
-; 计算精度类型
-; compute_type=int8 
-compute_type=float16
+; 计算设备 (cpu 或 cuda:0 等)
+device=cpu
+; 是否使用FP16精度（仅GPU有效，CPU忽略此选项，推荐GPU设为true以节省显存）
+use_fp16=false
 ; 默认模型语言设置
 ; language=en
 language=zh
