更新文本注入模块，添加注入器类型和后备注入方法的配置选项。重构注入器初始化逻辑，支持智能、旧版和后备注入器的选择，提升文本注入功能的灵活性和可用性。同时，新增文本注入模块的文档说明。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -11,6 +11,17 @@ locale=zh
 audio_backend=pulse
 ; 是否启用文本注入功能（将转录文本输入到当前光标位置）
 enable_injection=true
+; 注入器类型 (smart, legacy, fallback)
+; smart: 智能注入器，自动选择最佳方法（推荐）
+; legacy: 旧版注入器，使用pyautogui/pyclip
+; fallback: 后备注入器，只使用剪贴板粘贴/模拟键入
+injector_type=smart
+; 后备注入方法 (paste, type, xdotool, auto)
+; paste: 剪贴板粘贴
+; type: 模拟键盘输入
+; xdotool: Linux xdotool工具
+; auto: 自动选择
+fallback_method=auto
 ; 是否显示文本窗口
 show_text=FALSE
 ; 注入失败时是否显示文本窗口
