feat(config): 更新默认配置和客户端逻辑，优化流式识别和VAD参数
- 在默认配置中添加了VAD高级参数和流式识别优化参数，包括最大起始静音时间、静音到语音阈值、语音到静音阈值等。
- 更新NexTalk客户端逻辑，增加音频监听激活前的握手流程，确保在服务器就绪后再开始音频捕获，提升识别准确性。
- 实现流式模型的预热机制，确保模型在接收音频前已建立内部缓存状态，优化首次识别效果。
- 增强WebSocket处理器，添加流式模型预热和状态管理，确保更好的用户体验和系统稳定性。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -36,10 +36,23 @@ port=8010
 default_model=paraformer-zh-streaming
 ; 语音活动检测敏感度 (0-3)
 vad_sensitivity=2
+; VAD高级参数优化 - 改善语音起始点检测
+; 最大起始静音时间(ms) - 防止过早触发
+vad_max_start_silence_time=200
+; 静音到语音阈值(ms) - 更快检测语音开始
+vad_sil_to_speech_time=100
+; 语音到静音阈值(ms) - 防止过早结束
+vad_speech_to_sil_time=400
 ; 计算设备 (cpu 或 cuda:0 等)
 device=cpu
 ; 是否使用FP16精度（仅GPU有效，CPU忽略此选项，推荐GPU设为true以节省显存）
 use_fp16=false
+
+; 缓存预热设置 - 改善流式识别初始准确度
+; 是否启用缓存预热
+enable_cache_warmup=true
+; 预热轮数 - 发送静音数据建立上下文
+warmup_rounds=3
 ; 默认模型语言设置
 ; language=en
 language=zh
@@ -51,5 +64,21 @@ funasr_streaming=true
 ; funasr_punc_model=ct-punc
 ; FunASR时间戳预测模型（可选）
 ; funasr_timestamp_model=fa-zh
+
+; FunASR流式识别优化参数
+; chunk_size参数：[look_back, chunk_length, look_ahead]
+; 默认[0, 10, 5]表示不回看、处理600ms、前瞻300ms
+; 优化版[0, 10, 8]提高前瞻信息，改善前几个字识别准确度(会增加约180ms延迟)
+chunk_size=0,10,8
+; 编码器回看参数 - 增加上下文(默认0)
+encoder_chunk_look_back=2
+; 解码器回看参数 - 增加解码上下文(默认1)
+decoder_chunk_look_back=2
+
+; 模式选项：在准确度和延迟之间平衡
+; accuracy: 高准确度模式 chunk_size=[0,10,8] encoder_back=2 decoder_back=2
+; balanced: 平衡模式 chunk_size=[0,10,6] encoder_back=1 decoder_back=1  
+; speed: 低延迟模式 chunk_size=[0,10,5] encoder_back=0 decoder_back=1
+recognition_mode=accuracy
 
 log_level=info
