feat(config): 更新VAD参数和低延迟配置，优化语音检测
- 在默认配置中更新VAD高级参数，采用官方推荐设置，提升语音检测的准确性和响应性。
- 新增低延迟配置文件，优化VAD参数以实现更快的语音检测，适用于对延迟敏感的场景。
- 更新客户端逻辑，确保在音频捕获前进行必要的准备，提升用户体验和系统稳定性。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -36,13 +36,21 @@ port=8010
 default_model=paraformer-zh-streaming
 ; 语音活动检测敏感度 (0-3)
 vad_sensitivity=2
-; VAD高级参数优化 - 改善语音起始点检测
-; 最大起始静音时间(ms) - 防止过早触发
-vad_max_start_silence_time=200
-; 静音到语音阈值(ms) - 更快检测语音开始
-vad_sil_to_speech_time=100
-; 语音到静音阈值(ms) - 防止过早结束
-vad_speech_to_sil_time=400
+
+; VAD高级参数优化 - 基于官方FunASR文档的推荐设置
+; 最大起始静音时间(ms) - 官方默认3000ms，避免过早触发
+vad_max_start_silence_time=3000
+; 静音到语音阈值(ms) - 官方默认150ms，平衡准确性和响应性  
+vad_sil_to_speech_time=150
+; 语音到静音阈值(ms) - 官方默认150ms
+vad_speech_to_sil_time=150
+; 最大结束静音时间(ms) - 官方默认800ms
+vad_max_end_silence_time=800
+; 语音噪声阈值(0.0-1.0) - 提高阈值以减少噪声误检测
+vad_speech_noise_thres=0.6
+; 语音开始回看时间(ms) - 官方默认200ms，捕获语音开始前的音频
+vad_lookback_time_start_point=200
+
 ; 计算设备 (cpu 或 cuda:0 等)
 device=cpu
 ; 是否使用FP16精度（仅GPU有效，CPU忽略此选项，推荐GPU设为true以节省显存）
