feat(model): 重构FunASR模型管理，优化WebSocket处理逻辑
- 引入全局单例模式管理FunASR模型，简化模型的初始化和使用流程。
- 更新WebSocket处理器，直接移植官方逻辑，支持多客户端并发，提升系统稳定性。
- 优化VAD和ASR处理逻辑，确保在新协议下的音频数据处理更加高效和准确。
- 更新默认配置，确保VAD参数和流式识别设置符合最新优化建议。

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -37,19 +37,19 @@ default_model=paraformer-zh-streaming
 ; 语音活动检测敏感度 (0-3)
 vad_sensitivity=2
 
-; VAD高级参数优化 - 基于官方FunASR文档的推荐设置
-; 最大起始静音时间(ms) - 官方默认3000ms，避免过早触发
-vad_max_start_silence_time=3000
-; 静音到语音阈值(ms) - 官方默认150ms，平衡准确性和响应性  
-vad_sil_to_speech_time=150
-; 语音到静音阈值(ms) - 官方默认150ms
+; VAD高级参数优化 - 针对前几个字丢失问题的优化配置
+; 最大起始静音时间(ms) - 降低到500ms以提高VAD响应速度
+vad_max_start_silence_time=500
+; 静音到语音阈值(ms) - 降低到80ms以更快检测语音开始  
+vad_sil_to_speech_time=80
+; 语音到静音阈值(ms) - 保持默认150ms
 vad_speech_to_sil_time=150
-; 最大结束静音时间(ms) - 官方默认800ms
+; 最大结束静音时间(ms) - 保持默认800ms
 vad_max_end_silence_time=800
-; 语音噪声阈值(0.0-1.0) - 提高阈值以减少噪声误检测
-vad_speech_noise_thres=0.6
-; 语音开始回看时间(ms) - 官方默认200ms，捕获语音开始前的音频
-vad_lookback_time_start_point=200
+; 语音噪声阈值(0.0-1.0) - 降低到0.4以提高敏感度
+vad_speech_noise_thres=0.4
+; 语音开始回看时间(ms) - 增加到600ms以捕获更多前置音频
+vad_lookback_time_start_point=600
 
 ; 计算设备 (cpu 或 cuda:0 等)
 device=cpu
