feat: 新增 Fcitx5 插件安装脚本 `install_addon.sh`，实现自动编译、安装及依赖检查功能，支持用户级和系统级安装。更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -45,7 +45,7 @@ development_status:
   # ============================================
   epic-1: in-progress
   1-1-fcitx5-plugin-integration: done
-  1-2-plugin-install-script: backlog
+  1-2-plugin-install-script: done
   1-3-dart-socket-client: backlog
   1-4-flutter-project-init: backlog
   epic-1-retrospective: optional
