--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -46,7 +46,7 @@ development_status:
   epic-1: in-progress
   1-1-fcitx5-plugin-integration: done
   1-2-plugin-install-script: done
-  1-3-dart-socket-client: ready-for-dev
+  1-3-dart-socket-client: done
   1-4-flutter-project-init: done
   epic-1-retrospective: optional
 
