feat: 实现原生库链接配置，完成 Sherpa 和 PortAudio 库的集成。更新 CMakeLists.txt 以验证库文件存在性并复制到构建产物，新增版本记录和验证脚本，确保构建成功且 RPATH 配置正确。更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -55,8 +55,8 @@ development_status:
   # 用户可以说话，系统实时将语音转换为文本
   # FRs: FR2, FR3
   # ============================================
-  epic-2: backlog
-  2-1-native-library-linking: backlog
+  epic-2: in-progress
+  2-1-native-library-linking: done
   2-2-portaudio-ffi-binding: backlog
   2-3-sherpa-onnx-ffi-binding: backlog
   2-4-model-manager: backlog
