feat: 实现 PortAudio FFI 绑定和音频采集服务，支持音频流的初始化、读取和资源管理。新增单元测试和集成测试，确保功能完整性。更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,7 +57,7 @@ development_status:
   # ============================================
   epic-2: in-progress
   2-1-native-library-linking: done
-  2-2-portaudio-ffi-binding: backlog
+  2-2-portaudio-ffi-binding: done
   2-3-sherpa-onnx-ffi-binding: backlog
   2-4-model-manager: backlog
   2-5-audio-inference-pipeline: backlog
