--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -16,6 +16,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  ffi: ^2.1.0  # 必需：提供 calloc, Utf8 等
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
