feat: 实现模型管理器，支持自动下载、校验和解压 AI 模型。新增依赖包 dio、archive 和 crypto，确保模型完整性和下载进度反馈。更新 sprint 状态为完成，并添加单元测试覆盖核心功能。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -59,7 +59,7 @@ development_status:
   2-1-native-library-linking: done
   2-2-portaudio-ffi-binding: done
   2-3-sherpa-onnx-ffi-binding: done
-  2-4-model-manager: backlog
+  2-4-model-manager: done
   2-5-audio-inference-pipeline: backlog
   2-6-vad-endpoint-detection: backlog
   epic-2-retrospective: optional
