--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter:
     sdk: flutter
   ffi: ^2.1.0  # 必需：提供 calloc, Utf8 等
+  dio: ^5.4.0  # HTTP 下载 (支持代理、重试、进度)
+  archive: ^3.6.0  # tar.bz2 解压
+  crypto: ^3.0.3  # SHA256 校验
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
