feat: 实现音频推理流水线，整合音频采集与语音识别，支持零拷贝数据流和延迟统计。新增完整的单元测试覆盖所有功能，确保稳定性和性能。更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -60,7 +60,7 @@ development_status:
   2-2-portaudio-ffi-binding: done
   2-3-sherpa-onnx-ffi-binding: done
   2-4-model-manager: done
-  2-5-audio-inference-pipeline: backlog
+  2-5-audio-inference-pipeline: done
   2-6-vad-endpoint-detection: backlog
   epic-2-retrospective: optional
 
