feat: 实现 VAD 端点检测功能，支持自动识别静音并触发事件，新增 EndpointEvent 和 VadConfig 类型定义，更新音频推理流水线以集成 VAD 逻辑，添加相关单元测试确保功能完整性，更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -61,7 +61,7 @@ development_status:
   2-3-sherpa-onnx-ffi-binding: done
   2-4-model-manager: done
   2-5-audio-inference-pipeline: done
-  2-6-vad-endpoint-detection: backlog
+  2-6-vad-endpoint-detection: done
   epic-2-retrospective: optional
 
   # ============================================
