--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -69,8 +69,8 @@ development_status:
   # 用户获得无缝、美观的语音输入体验
   # FRs: FR1, FR5, FR6
   # ============================================
-  epic-3: backlog
-  3-1-transparent-capsule-window: backlog
+  epic-3: in-progress
+  3-1-transparent-capsule-window: done
   3-2-capsule-ui-component: backlog
   3-3-state-machine-animations: backlog
   3-4-system-tray-integration: backlog
