--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dio: ^5.4.0  # HTTP 下载 (支持代理、重试、进度)
   archive: ^3.6.0  # tar.bz2 解压
   crypto: ^3.0.3  # SHA256 校验
+  window_manager: ^0.3.9  # 窗口管理 (size, position, alwaysOnTop)
+  shared_preferences: ^2.2.2  # 位置持久化存储
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
