--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -71,7 +71,7 @@ development_status:
   # ============================================
   epic-3: in-progress
   3-1-transparent-capsule-window: done
-  3-2-capsule-ui-component: backlog
+  3-2-capsule-ui-component: done
   3-3-state-machine-animations: backlog
   3-4-system-tray-integration: backlog
   3-5-global-hotkey-listener: backlog
