feat: 实现系统托盘集成功能，新增 TrayService 以管理托盘图标和菜单，支持窗口显隐切换和资源释放，更新 WindowService 以支持启动时隐藏窗口，创建完整单元测试覆盖所有验收标准，更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -73,7 +73,7 @@ development_status:
   3-1-transparent-capsule-window: done
   3-2-capsule-ui-component: done
   3-3-state-machine-animations: done
-  3-4-system-tray-integration: backlog
+  3-4-system-tray-integration: done
   3-5-global-hotkey-listener: backlog
   3-6-full-business-flow: backlog
   epic-3-retrospective: optional
