--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   crypto: ^3.0.3  # SHA256 校验
   window_manager: ^0.3.9  # 窗口管理 (size, position, alwaysOnTop)
   shared_preferences: ^2.2.2  # 位置持久化存储
+  system_tray: ^2.0.3  # 系统托盘支持 (Story 3-4)
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,10 +50,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Story 3-4: 托盘图标资源
+  assets:
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
