feat: 实现全局快捷键监听功能，新增 HotkeyService 和 HotkeyController，支持快捷键配置、注册、注销及冲突处理，创建完整单元测试覆盖所有验收标准，更新 sprint 状态为完成。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -74,6 +74,6 @@ development_status:
   3-2-capsule-ui-component: done
   3-3-state-machine-animations: done
   3-4-system-tray-integration: done
-  3-5-global-hotkey-listener: backlog
+  3-5-global-hotkey-listener: done
   3-6-full-business-flow: backlog
   epic-3-retrospective: optional
