feat: 实现完整业务流串联，完成 Epic 3 核心功能
- 重构 main.dart 实现完整初始化流程
- 创建 NextalkApp 组件绑定状态流
- 集成 HotkeyController 与所有服务
- 实现端到端语音输入体验
- 添加集成测试覆盖核心流程
- 更新 sprint 状态为完成

Story: 3-6
Epic: 3 (完整产品体验)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -69,11 +69,11 @@ development_status:
   # 用户获得无缝、美观的语音输入体验
   # FRs: FR1, FR5, FR6
   # ============================================
-  epic-3: in-progress
+  epic-3: done
   3-1-transparent-capsule-window: done
   3-2-capsule-ui-component: done
   3-3-state-machine-animations: done
   3-4-system-tray-integration: done
   3-5-global-hotkey-listener: done
-  3-6-full-business-flow: backlog
+  3-6-full-business-flow: done
   epic-3-retrospective: optional
