feat: 增强错误处理与状态管理，支持设备丢失和错误状态的用户交互
- 新增音频设备状态检测，支持在录音前预检测设备可用性
- 扩展胶囊状态管理，新增初始化、下载和提取状态
- 细化错误类型，支持音频和模型相关错误的处理
- 集成错误操作按钮，允许用户在错误状态下进行操作
- 更新状态指示器以反映新的状态和错误类型
- 添加单元测试覆盖新功能，确保稳定性和性能

Story: 3-7
Epic: 3 (完整产品体验)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -69,11 +69,12 @@ development_status:
   # 用户获得无缝、美观的语音输入体验
   # FRs: FR1, FR5, FR6
   # ============================================
-  epic-3: done
+  epic-3: in-progress
   3-1-transparent-capsule-window: done
   3-2-capsule-ui-component: done
   3-3-state-machine-animations: done
   3-4-system-tray-integration: done
   3-5-global-hotkey-listener: done
   3-6-full-business-flow: done
+  3-7-init-wizard-error-handling: done
   epic-3-retrospective: optional
