feat: 更新依赖项并添加动画服务以增强用户体验
- 将多个依赖项（如 window_manager 和 screen_retriever）更新至最新版本，以确保兼容性和性能提升
- 新增 AnimationTickerService，提供全局动画管理，确保呼吸灯和波纹效果无延迟显示
- 修改 UI 组件以使用全局动画服务，提升动画流畅度和一致性
- 更新窗口服务逻辑，优化窗口显示和隐藏行为

Story: 3-7
Epic: 3 (完整产品体验)

--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   dio: ^5.4.0  # HTTP 下载 (支持代理、重试、进度)
   archive: ^3.6.0  # tar.bz2 解压
   crypto: ^3.0.3  # SHA256 校验
-  window_manager: ^0.3.9  # 窗口管理 (size, position, alwaysOnTop)
+  window_manager: ^0.5.1  # 窗口管理 (size, position, alwaysOnTop, skipTaskbar)
   shared_preferences: ^2.2.2  # 位置持久化存储
   system_tray: ^2.0.3  # 系统托盘支持 (Story 3-4)
   hotkey_manager: ^0.2.3  # 全局快捷键支持 (Story 3-5)
