feat: 实现中英双语国际化与托盘语言切换功能
- 新增 LanguageService 管理应用国际化，支持系统语言检测、热切换和持久化语言偏好。
- 在托盘菜单中集成语言切换功能，用户可通过右键菜单选择语言。
- 更新 UI 组件以响应语言变化，确保所有文本即时更新。
- 添加中英文翻译文件，覆盖应用内所有相关文本。
- 完成单元测试，确保语言服务功能稳定。

Story: 3-8
Epic: 3 (完整产品体验)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -77,4 +77,15 @@ development_status:
   3-5-global-hotkey-listener: done
   3-6-full-business-flow: done
   3-7-init-wizard-error-handling: done
+  3-8-i18n-language-switch: done
   epic-3-retrospective: optional
+
+  # ============================================
+  # Epic 4: 打包发布 (Distribution)
+  # 用户可以通过标准 DEB 包安装 Nextalk
+  # ============================================
+  epic-4: in-progress
+  4-1-deb-build-script: ready-for-dev
+  4-2-install-uninstall-scripts: backlog
+  4-3-desktop-integration: backlog
+  epic-4-retrospective: optional
