feat: 添加多格式打包支持，优化安装流程
- 新增统一构建脚本 `build-pkg.sh`，支持同时构建 DEB 和 RPM 包，简化打包流程。
- 更新 README.md，详细说明安装和卸载步骤，增强用户体验。
- 添加多语言支持，确保安装提示根据系统语言自动切换。
- 完善 DEB 和 RPM 包的控制文件，确保依赖关系和元数据正确。

Story: 4-1

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -85,7 +85,7 @@ development_status:
   # 用户可以通过标准 DEB 包安装 Nextalk
   # ============================================
   epic-4: in-progress
-  4-1-deb-build-script: ready-for-dev
+  4-1-deb-build-script: done
   4-2-install-uninstall-scripts: backlog
   4-3-desktop-integration: backlog
   epic-4-retrospective: optional
