feat: 完成安装与卸载脚本的验证工作
- 新增文档记录 Story 4.2，确认所有验收标准已在 Story 4-1 中实现。
- 验证 DEB 和 RPM 包的安装/卸载脚本功能，确保符号链接创建、用户数据保留及依赖处理等功能正常。
- 更新 sprint-status.yaml，将 4-2-install-uninstall-scripts 状态标记为 done。

Story: 4-2

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -86,6 +86,6 @@ development_status:
   # ============================================
   epic-4: in-progress
   4-1-deb-build-script: done
-  4-2-install-uninstall-scripts: backlog
+  4-2-install-uninstall-scripts: done
   4-3-desktop-integration: backlog
   epic-4-retrospective: optional
