feat: 完成桌面集成实现，确保应用符合 freedesktop.org 规范
- 新增文档记录 Story 4.3，确认所有验收标准已实现，包括应用菜单显示、Desktop Entry 合规性、图标规范及中文本地化。
- 创建验证脚本 `verify-desktop-integration.sh`，支持验证桌面入口、图标安装及应用启动。
- 更新 `build-pkg.sh`，支持多尺寸图标生成，确保桌面集成效果。
- 更新 `sprint-status.yaml`，将 4-3-desktop-integration 状态标记为 done。

Story: 4-3

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -87,5 +87,5 @@ development_status:
   epic-4: in-progress
   4-1-deb-build-script: done
   4-2-install-uninstall-scripts: done
-  4-3-desktop-integration: backlog
+  4-3-desktop-integration: done
   epic-4-retrospective: optional
