feat: 增强 Nextalk 插件功能，支持快捷键监听与配置接收
- 在 NextalkAddon 中新增快捷键映射初始化和事件处理功能，支持全局快捷键配置。
- 实现配置接收 Socket，允许 Flutter 应用通过 Unix Socket 接收来自 Fcitx5 插件的命令。
- 更新文档，明确插件功能，包括快捷键监听和配置接收，提升用户体验。

Story: 3-5

--- a/packaging/deb/nextalk.desktop
+++ b/packaging/deb/nextalk.desktop
@@ -7,11 +7,11 @@ GenericName=Voice Input
 GenericName[zh_CN]=语音输入
 Comment=Offline voice-to-text input for Linux
 Comment[zh_CN]=Linux 离线语音输入应用
-Exec=/opt/nextalk/nextalk
+Exec=env GDK_BACKEND=x11 /opt/nextalk/nextalk
 Icon=nextalk
 Terminal=false
 Categories=Utility;Accessibility;
 Keywords=voice;speech;input;dictation;
 Keywords[zh_CN]=语音;输入;听写;识别;
 StartupNotify=true
-StartupWMClass=nextalk
+StartupWMClass=com.gonewx.nextalk
