--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -26,12 +26,12 @@ dependencies:
   window_manager: ^0.5.1  # 窗口管理 (size, position, alwaysOnTop, skipTaskbar)
   shared_preferences: ^2.2.2  # 位置持久化存储
   system_tray: ^2.0.3  # 系统托盘支持 (Story 3-4)
-  hotkey_manager: ^0.2.3  # 全局快捷键支持 (Story 3-5)
   yaml: ^3.1.2  # 配置文件解析 (Story 3-5)
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  xdg_desktop_portal: ^0.1.13
 
 dev_dependencies:
   flutter_test:
