feat: 增强 Nextalk 插件的按键事件处理与音频设备预热
- 在 NextalkAddon 中优化快捷键事件处理，支持 PTT 模式下的录音控制，确保按键状态管理更为准确。
- 新增音频设备预热功能，避免首次录音时因设备初始化延迟导致语音丢失。
- 更新 VAD 端点检测逻辑，支持 PTT 模式下的文本累积与状态管理。
- 引入渐变文字流效果，提升用户界面体验。

Story: 3-5

--- a/voice_capsule/linux/runner/CMakeLists.txt
+++ b/voice_capsule/linux/runner/CMakeLists.txt
@@ -19,6 +19,17 @@ apply_standard_settings(${BINARY_NAME})
 # Add preprocessor definitions for the application ID.
 add_definitions(-DAPPLICATION_ID="${APPLICATION_ID}")
 
+# ============================================
+# Nextalk: gtk-layer-shell for Wayland overlay
+# ============================================
+pkg_check_modules(GTK_LAYER_SHELL IMPORTED_TARGET gtk-layer-shell-0)
+if(GTK_LAYER_SHELL_FOUND)
+  message(STATUS "gtk-layer-shell found, enabling Wayland layer shell support")
+  target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GTK_LAYER_SHELL)
+else()
+  message(WARNING "gtk-layer-shell not found, Wayland overlay may steal focus")
+endif()
+
 # Add dependency libraries. Add any application-specific dependencies here.
 target_link_libraries(${BINARY_NAME} PRIVATE flutter)
 target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GTK)
