feat: 增强 Makefile 和安装脚本，支持版本同步与插件安装
- 在 Makefile 中新增 `sync-version` 目标，自动同步版本号到 `pubspec.yaml`。
- 更新 `build-flutter` 和 `build-flutter-debug` 目标，确保在构建前同步版本。
- 在 `install_addon.sh` 中从 `version.yaml` 读取插件版本，提升版本管理的灵活性。
- 新增 `install-addon-system` 目标，支持系统级插件安装，提供用户级和系统级安装选项。

Story: 3-7

--- a/addons/fcitx5/CMakeLists.txt
+++ b/addons/fcitx5/CMakeLists.txt
@@ -1,5 +1,23 @@
 cmake_minimum_required(VERSION 3.16)
-project(fcitx5-nextalk VERSION 0.1.0)
+
+# 从 version.yaml 读取插件版本
+set(VERSION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../../version.yaml")
+if(EXISTS "${VERSION_FILE}")
+    file(STRINGS "${VERSION_FILE}" VERSION_LINE REGEX "^addon_version:")
+    if(VERSION_LINE)
+        string(REGEX MATCH "[0-9]+\\.[0-9]+\\.[0-9]+" ADDON_VERSION "${VERSION_LINE}")
+        if(NOT ADDON_VERSION)
+            set(ADDON_VERSION "0.1.0")
+        endif()
+    else()
+        set(ADDON_VERSION "0.1.0")
+    endif()
+else()
+    set(ADDON_VERSION "0.1.0")
+endif()
+
+message(STATUS "Addon version: ${ADDON_VERSION}")
+project(fcitx5-nextalk VERSION ${ADDON_VERSION})
 
 # 查找 Fcitx5
 find_package(Fcitx5Core 5.0.0 REQUIRED)
