fix: 更新插件库文件名以保持一致性
- 将插件库文件名从 `nextalk.so` 更改为 `libnextalk.so`，以符合 Fcitx5 插件的命名约定。
- 更新相关的卸载脚本、安装脚本和配置文件，确保所有引用均已同步更新。
- 增强构建和安装过程中的错误检查，确保插件文件的正确性。

Story: 3-7

--- a/addons/fcitx5/CMakeLists.txt
+++ b/addons/fcitx5/CMakeLists.txt
@@ -35,8 +35,8 @@ add_library(nextalk MODULE
     src/nextalk.cpp
 )
 
-# Fcitx5 expects addon library without "lib" prefix
-set_target_properties(nextalk PROPERTIES PREFIX "")
+# Keep default "lib" prefix for consistency with other Fcitx5 addons
+# Output: libnextalk.so
 
 target_link_libraries(nextalk
     Fcitx5::Core
@@ -60,6 +60,7 @@ configure_file(
 install(
     FILES "${CMAKE_CURRENT_BINARY_DIR}/nextalk.conf"
     DESTINATION "${FCITX_INSTALL_PKGDATADIR}/addon"
+    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
 )
 
 message(STATUS "Fcitx5 addon dir: ${FCITX_INSTALL_ADDONDIR}")
