feat: 添加 screen_retriever 依赖并实现窗口位置恢复逻辑
- 在 pubspec.yaml 中新增 screen_retriever 依赖，版本为 ^0.2.0。
- 更新 pubspec.lock 文件以反映依赖关系的变化。
- 在 WindowService 中实现屏幕位置恢复逻辑，首次运行时窗口居中显示，后续运行恢复上次保存的位置，提升用户体验。

Story: 3-7

--- a/voice_capsule/pubspec.yaml
+++ b/voice_capsule/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   xdg_desktop_portal: ^0.1.13
+  screen_retriever: ^0.2.0
 
 dev_dependencies:
   flutter_test:
