feat: 添加 Docker 支持以实现跨发行版编译
- 在 Makefile 中新增 Docker 相关目标，支持在 Docker 容器中编译 Flutter 应用和 Fcitx5 插件，确保编译产物在多个 Linux 发行版上兼容。
- 创建 Dockerfile 和 docker-build.sh 脚本，简化编译流程并提供多种编译选项。
- 更新文档，提供 Docker 编译指南和常见问题解决方案，提升开发者体验。

Story: 4-4

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -89,4 +89,5 @@ development_status:
   4-1-deb-build-script: done
   4-2-install-uninstall-scripts: done
   4-3-desktop-integration: done
+  4-4-docker-cross-distro-build: done
   epic-4-retrospective: optional
