feat: 增强 Makefile 和构建脚本，支持多种包格式打包
- 在 Makefile 中新增 `package-deb`、`package-rpm` 和 `package-all` 目标，支持构建 DEB 和 RPM 包，以及所有包格式的打包。
- 更新 `build-pkg.sh` 脚本，调整库路径管理，确保在不同 Linux 发行版上正确构建插件。
- 更新文档，提供新的打包命令说明，提升开发者体验。

Story: 3-7

--- a/packaging/rpm/nextalk.spec.template
+++ b/packaging/rpm/nextalk.spec.template
@@ -13,6 +13,7 @@ AutoReqProv:    no
 Requires:       fcitx5 >= 5.0
 Requires:       gtk3 >= 3.24
 Requires:       glibc >= 2.31
+Requires:       libayatana-appindicator-gtk3
 Recommends:     pulseaudio
 
 %description
@@ -150,7 +151,7 @@ fi
 /opt/nextalk/nextalk
 /opt/nextalk/lib/*
 /opt/nextalk/data/*
-%{_libdir}/fcitx5/nextalk.so
+%{_libdir}/fcitx5/libnextalk.so
 %{_datadir}/fcitx5/addon/nextalk.conf
 %{_datadir}/applications/nextalk.desktop
 %{_datadir}/icons/hicolor/48x48/apps/nextalk.png
