fix: 添加 --skip-build 选项修复 CI 打包问题

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,11 +95,11 @@ jobs:
 
       - name: Build DEB package
         run: |
-          ./scripts/build-pkg.sh --deb
+          ./scripts/build-pkg.sh --deb --skip-build
 
       - name: Build RPM package
         run: |
-          ./scripts/build-pkg.sh --rpm
+          ./scripts/build-pkg.sh --rpm --skip-build
 
       - name: List artifacts
         run: |
