feat: 添加音频输入设备选择功能
- 升级应用版本至 0.2.0
- 实现音频输入设备选择，支持 CLI 和托盘菜单操作
- 增加音频设备错误提示对话框
- 更新相关服务和配置，确保与系统设置一致
- 添加单元测试以验证音频设备服务功能

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -79,6 +79,7 @@ development_status:
   3-6-full-business-flow: done
   3-7-init-wizard-error-handling: done
   3-8-i18n-language-switch: done
+  3-9-audio-device-selection: ready-for-review
   epic-3-retrospective: optional
 
   # ============================================
