chore: 更新应用版本至 0.2.4，增强 Makefile 支持 Docker 打包功能
- 将应用版本更新至 0.2.4
- 在 Makefile 中新增 Docker 打包 DEB、RPM 和所有格式的目标
- 更新构建命令以从 version.yaml 读取版本号
- 修改 .gitignore 以排除新生成的文件
- 在 postinst 和 RPM 模板中添加提示信息，指导用户解决启动问题

--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -27,6 +27,8 @@ RUN apt-get update && apt-get install -y \
     libfcitx5core-dev libfcitx5utils-dev libfcitx5config-dev \
     # PortAudio 开发库 (音频采集)
     libportaudio2 portaudio19-dev \
+    # 打包工具 (DEB 和 RPM)
+    dpkg dpkg-dev rpm imagemagick \
     && rm -rf /var/lib/apt/lists/*
 
 # 安装 Flutter 3.32.5 (直接克隆指定标签)
