--- a/packaging/rpm/nextalk.spec.template
+++ b/packaging/rpm/nextalk.spec.template
@@ -165,6 +165,10 @@ fi
 %{_datadir}/icons/hicolor/256x256/apps/nextalk.png
 
 %changelog
+* Sun Jan 12 2026 Nextalk Team <lgq502@gmail.com> - 0.2.4-1
+- Fix version sync: CLI version command now reads from version.yaml
+- Improve Docker build with version injection
+
 * Sun Dec 28 2025 Nextalk Team <lgq502@gmail.com> - 0.1.4-1
 - Fix clipboard mode UI prompt interaction flow
 - Update documentation for Fedora tray icon issues
