--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -79,6 +79,7 @@ development_status:
   3-6-full-business-flow: done
   3-7-init-wizard-error-handling: done
   3-8-i18n-language-switch: done
+  # 2026-01-13: 重构为 libpulse-simple 录音 + libpulse 设备枚举，待用户测试验证
   3-9-audio-device-selection: ready-for-review
   epic-3-retrospective: optional
 
